# fast_box

./: docker-compose.yml  pyproject.toml  test_main.http
docker/server/: Dockerfile
src/: alembic.ini  app.py  requirements.txt
src/alembic/: env.py
src/alembic/versions/: 43a1a962f2f1_moving_is_active.py  ba0acd7eb9e3_add_password.py  cdc20b063c33_first.py
src/api/: courses.py  users.py
src/api/utils/: courses.py  users.py
src/courses/: routers.py  sections.py
src/courses/models/: course.py
src/courses/schemas/: course.py
src/courses/utils/: courses.py
src/db/: db_setup.py
src/db/models/: course.py  user.py
src/fast_box/: _main_.py  settings.py
src/schemas/: user.py
src/users/: routers.py
src/users/models/: user.py
src/users/schemas/: user.py
src/users/utils/: users.py
