[tool.poetry]
name = "fast_box"
version = "0.1.0"
description = ""
authors = ["Artur <art05xxx@rambler.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.18.3"
fastapi = "^0.82.0"
pydantic = "^1.10.2"
SQLAlchemy = "^1.4.41"
SQLAlchemy-Utils = "^0.38.3"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.3"
aiopg = {extras = ["sa"], version = "^1.3.4"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
